Revision history of ngx_http_upstream_memcached_hash_module.

0.04  ???
        - ???

        ???


0.03  2008-05-01
        - bugfix release.

        Fix key distribution bug in compatible mode.  Because of
        accumulated rounding error some keys were mapped to the
        different server than with Cache::Memcached.


0.02  2008-02-19
        - add support for $memcached_namespace variable.

        If Cache::Memcached::Fast uses

           namespace => 'prefix',

        then nginx configuration file should have

          set $memcached_namespace "prefix";

        This is not the same as prepending "prefix" to $memcached_key:
        namespace prefix should not be hashed.


0.01  2008-01-27
        - first official release.

        The hashing is fully compatible with Cache::Memcached::Fast
        and Cache::Memcached, and thus with any other client that is
        compatible with C::M.


0.00  2007-12-24
        - development started.